--- a/index.html
+++ b/index.html
@@ -77,24 +77,28 @@
 
     <!-- Meaningful climate -->
     <main>
-        <div class="container-meaningful">
-            <div class="left">
-                <div class="text1">
-                    <h1 class="h1">Meaningful climate action for your business</h1>
-                </div>
-                <div class="text2"></div>
-                <div class="text3">
-                    <h2 class="h2">
-                        Meet and exceed your ESG goals by making a real, positive impact in
-                        the fight against climate change. Which nature-based solution is
-                        best for your business?
-                    </h2>
-                </div>
-                <div class="text4">
-                    <a href="https://ecotree.green/en/companies/contact" class="button">Contact us ></a>
+        <div class="container-box">
+            <div class="container-meaningful">
+                <div class="left">
+                    <div class="text1">
+                        <h1 class="h1">Meaningful climate action for your business</h1>
+                    </div>
+                    <div class="text2"></div>
+                    <div class="text3">
+                        <h2 class="h2">
+                            Meet and exceed your ESG goals by making a real, positive impact in
+                            the fight against climate change. Which nature-based solution is
+                            best for your business?
+                        </h2>
+                    </div>
+                    <div class="text4">
+                        <a href="https://ecotree.green/en/companies/contact" class="button">Contact us ></a>
+                    </div>
                 </div>
             </div>
-            <div class="right photo"></div>
+            <div>
+                <div class="right photo"></div>
+            </div>
         </div>
     </main>
 
